# PhoneNumbersIPP

./: .gitignore  CMakeLists.txt  CMakeListsa.txt  MainPage.dox  workspace.code-workspace
AdditionalModules/: string_vector.c  string_vector.h
src/: blackred_tree.c  blackred_tree.h  compressed_trie.c  compressed_trie.h  double_linked_list.c  double_linked_list.h  dynamic_array.c  dynamic_array.h  main.c  memory.h  phone_forward.c  phone_forward.h  phone_forward_example.c  string_lib.c  string_lib.h  string_vector.c
testing/: .gdb_history  a.out  parser.c  test  test.sh
testing/rust_generator/: Cargo.toml
testing/rust_generator/src/: main.rs
